kubernetes/apps/miniflux/miniflux.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  selector:
      matchLabels:
        app.kubernetes.io/name: miniflux
  template:
    metadata:
      labels:
        app: miniflux
        app.kubernetes.io/name: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux:2.3.3
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
