kubernetes/apps/miniflux/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  labels:
    app: miniflux
    app.kubernetes.io/name: miniflux
spec:
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - name: http
      port: 80
      targetPort: http
