kubernetes/apps/miniflux/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: miniflux.png
    gethomepage.dev/name: Miniflux
    gethomepage.dev/group: Random
    gethomepage.dev/description: "Feed reader"
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - miniflux.lac-coloc.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: miniflux
      port: 80
---
# HTTPRoute pour HTTP (redirection 301)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux-http-redirect
  namespace: miniflux
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - miniflux.lac-coloc.fr
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
